# vgi-vision

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  vision_worker.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  run-integration.sh
test/sql/: classify.test  hostile.test
tests/: harness.py  test_client_integration.py  test_model.py  test_scalars.py  test_tables.py
vgi_vision/: __init__.py  _examples.py  meta.py  model.py  scalars.py  schema_utils.py  tables.py  worker.py
